Fix background: use layered gradient overlay instead of pseudo-element
The ::before with z-index:-1 was hidden behind body's own background.
Use CSS multiple backgrounds to layer the overlay on top of bg.jpg.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -43,23 +43,12 @@ body {
   line-height: 1.7;
   color: var(--text);
   background-color: var(--bg);
-  background-image: url('../images/bg.jpg');
+  background-image: linear-gradient(var(--bg-overlay), var(--bg-overlay)), url('../images/bg.jpg');
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   -webkit-font-smoothing: antialiased;
-
-  &::before {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--bg-overlay);
-    z-index: -1;
-  }
 }
 
 // Typography
